--- a/src/projects/Projects.module.scss
+++ b/src/projects/Projects.module.scss
@@ -1,27 +1,20 @@
 @import '../common/styles/sass/variables';
+@import '../common/styles/sass/mixins';
+
 .projectsBlock {
-  min-height: 100vh;
+  padding: 100px 0;
   background-color: $bgSecondColor;
-
-  .projectsContainer {
-    flex-direction: column;
-    justify-content: flex-start;
-    flex-wrap: nowrap;
-
+  .container {
+    @include container();
+    @include flex(column, flex-start, stretch, nowrap);
     .projects {
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      align-items: flex-start;
+      @include flex(row, space-between, flex-start, wrap);
       @media screen and (max-width: 1124px) {
         justify-content: center;
       }
     }
   }
 }
-
-
 
 
 
