--- a/src/common/components/button/Button.module.scss
+++ b/src/common/components/button/Button.module.scss
@@ -1,27 +1,42 @@
 @import '../../styles/sass/variables';
-.title {
-    margin:0 0 30px;
-    font-family: 'Josefin Sans', sans-serif;
+@import '../../styles/sass/mixins';
+
+.btn {
+  text-decoration: none;
+  border: none;
+  @include flex(row, center, center, nowrap);
+  @include text($textFontFamily, 14px, 1.2, 400);
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  padding: 8px 20px;
+  max-width: 160px;
+  width: 100%;
+  outline: none;
+  position: relative;
+  z-index: 0;
+
+  &::after {
+
+    content: '';
+    position: absolute;
+    width: 50%;
+    height: 10px;
+    background: $primaryColor;
+    bottom: 0;
+    z-index: -1;
+    transition: all 0.3s ease-in-out;
+  }
+
+  &:hover {
+    text-decoration: none;
     color: $textColor;
-    text-transform: capitalize;
-    line-height: 1.2;
-    letter-spacing: 5px;
-    position: relative;
-    & h2 {
-        font-size: 36px;
-        margin-top: 30px;
-        font-weight: 400;
+
+    &::after {
+      width: 100%;
+      height: 100%;
+      transition: all 0.3s ease-in-out 0s;
     }
-    &::before {
-        content: "";
-        background: $primaryColor;
-        width: 55px;
-        height: 1px;
-        position: absolute;
-        left: 50%;
-        transform: translate(-50%, 50%);
-        bottom: 0px;
-    }
+  }
 }
 
 
