--- a/src/common/components/title/Title.module.scss
+++ b/src/common/components/title/Title.module.scss
@@ -1,4 +1,6 @@
 @import '../../styles/sass/variables';
+@import '../../styles/sass/mixins';
+
 .title {
     margin:0 0 30px;
     font-family: 'Josefin Sans', sans-serif;
@@ -7,6 +9,7 @@
     line-height: 1.2;
     letter-spacing: 5px;
     position: relative;
+    text-align: center;
     & h2 {
         font-size: 36px;
         margin-top: 30px;
@@ -20,7 +23,7 @@
         position: absolute;
         left: 50%;
         transform: translate(-50%, 50%);
-        bottom: 0px;
+        bottom: 0;
     }
 }
 
