--- a/src/contacts/Contacts.module.scss
+++ b/src/contacts/Contacts.module.scss
@@ -1,26 +1,68 @@
 @import '../common/styles/sass/variables';
-.contactsBlock {
-    background-color: $bgSecondColor;
-    .contactsContainer {
-        flex-direction: column;
-        justify-content: flex-start;
-        .contactForm {
-            background-color: #dab4f6;
-            width: 50%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            .contactForm input, .contactForm textarea{
-                width: 100%
-            }
-            .button {
-                background-color: darkgrey;
-                padding: 10px 20px;
-            }
-        }
-    }
+@import '../common/styles/sass/mixins';
+@import '../common/components/button/Button.module';
 
+.contactsBlock {
+  padding: 100px 0;
+  background-color: $bgSecondColor;
+
+  .container {
+    @include container();
+    @include flex(column, flex-start, center, nowrap);
+
+    .contactForm {
+      @include flex(column, flex-start, stretch, nowrap);
+      width: 540px;
+      @media screen and (max-width: 680px) {
+        width: 100%;
+      }
+
+      .formArea,
+      .messageArea {
+        background: $bgColor;
+        border: 1px solid #4a4a4a;
+        box-sizing: border-box;
+        @include text(inherit, 14px, 1.5, 400);
+        outline: none;
+        color: #495057;
+        margin-bottom: 1.2rem;
+        &:-webkit-autofill {
+          border: 1px solid #4a4a4a;
+          -webkit-text-fill-color: #495057;
+          -webkit-box-shadow: 0 0 0 1000px #252527 inset;
+          transition: background-color 5000s ease-in-out 0s;
+          &:focus {
+            border: 2px solid $bgSecondColor;
+          }
+        }
+      }
+      .formArea {
+        height: calc(1.5em + .75rem + 2px);
+        padding: .4rem 15px;
+        &:focus {
+          border: 1px solid transparent;
+          transition: all 0.4s ease-in-out 0s;
+        }
+      }
+      .messageArea {
+        min-height: 160px;
+        padding: 15px;
+        resize: none;
+        &:focus {
+          border: 1px solid transparent;
+          transition: all 0.4s ease-in-out 0s;
+        }
+      }
+
+      button[type="submit"] {
+        @extend .btn;
+        align-self: center;
+        background-color: transparent;
+      }
+    }
+  }
 }
+
 
 
 
