--- a/src/footer/Footer.module.scss
+++ b/src/footer/Footer.module.scss
@@ -1,24 +1,48 @@
 @import '../common/styles/sass/variables';
+@import '../common/styles/sass/mixins';
 .footerBlock {
     background-color: $bgColor;
-    .footerContainer {
-        flex-direction: column;
-        justify-content: flex-start;
-        .socialIcons {
-            width: 250px;
-            background-color: #c8c5c5;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
+    min-height: 300px;
+    @include flex(row, center, stretch, nowrap);
+    .container {
+        @include container();
+        @include flex(column, flex-start, center, nowrap);
+        padding: 100px 0 20px;
+        .socialIcons{
+            @include flex(row, space-between, center, nowrap);
+            width: 400px;
+            margin-top: 30px;
+            @media screen and (max-width: 505px){
+                width: 100%;
+            }
+            .socialIcon {
+                width: 60px;
+                height: 60px;
+                border: 1px solid #4a4a4a;;
+                border-radius: 50%;
+                &:hover {
+                    border: 1px solid $textColor;
+                    transition: all 0.3s ease-in-out 0s;
+                }
+                @media screen and (max-width: 380px){
+                    width: 50px;
+                    height: 50px;
+                }
+                a {
+                    width: 100%;
+                    height: 100%;
+                    @include flex(row, center, center, nowrap);
+                    img {
+                        width: 60%;
+                    }
+                }
+            }
         }
-        .socialIcon {
-            width: 50px;
-            height: 50px;
-            background-color: #f3f1f1;
+        .copyright {
+            margin-top: 40px;
+            @include text($textFontFamily, 14px, 1.8, 300);
+            opacity: 0.6;
         }
-    }
-    .copyright{
-
     }
 }
 
