--- a/src/hire/Hire.module.scss
+++ b/src/hire/Hire.module.scss
@@ -1,14 +1,13 @@
 @import '../common/styles/sass/variables';
+@import '../common/styles/sass/mixins';
+
 .hireBlock {
     background-color: $bgColor;
-    .hireContainer {
-        flex-direction: column;
-        justify-content: flex-start;
-        border: 1px solid
-    }
-    .button {
-        background-color: darkgrey;
-        padding: 10px 20px;
+    padding: 100px 0;
+    .container {
+        @include container();
+        @include flex(column, space-between, center, nowrap);
+        height: 150px;
     }
 
 }
