--- a/src/projects/project/Project.module.scss
+++ b/src/projects/project/Project.module.scss
@@ -36,12 +36,12 @@
   .projectInfo {
     padding: 25px 20px;
     .projectTitle {
-      @include text($titleFontFamily, 16px, 1.2);
+      @include text($titleFontFamily, 16px, 1.2, 400);
       letter-spacing: 1px;
       margin: 0 0 5px;
     }
     .description {
-      @include text($textFontFamily, 14px, 1.8);
+      @include text($textFontFamily, 14px, 1.8, 400);
       font-weight: 400;
     }
   }
