--- a/src/header/Header.module.scss
+++ b/src/header/Header.module.scss
@@ -1,17 +1,16 @@
+@import '../common/styles/sass/variables';
+@import '../common/styles/sass/mixins';
+
 .header{
     height: 80px;
     background-color: #202020;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    width: 100%;
+    padding: 0 30px;
+    @include flex(row, flex-end, center, nowrap);
+    opacity: 0.9;
     position: fixed;
-    .container{
-        width:80%;
-        margin: 0 auto;
-        display: flex;
-        justify-content: flex-end;
-    }
-}
+    z-index: 9999;
+    left: 0;
+    right: 0;
 
+}
 
