--- a/src/header/Header.module.scss
+++ b/src/header/Header.module.scss
@@ -3,7 +3,7 @@
 
 .header{
     height: 80px;
-    background-color: #202020;
+    background-color: $bgColor;
     padding: 0 30px;
     @include flex(row, flex-end, center, nowrap);
     opacity: 0.9;
