--- a/src/main/Main.module.scss
+++ b/src/main/Main.module.scss
@@ -2,77 +2,97 @@
 @import '../common/styles/sass/mixins';
 
 .mainBlock {
-    padding: 100px 0;
-    min-height: 100vh;
-    background-color: $bgSecondColor;
-    @include flex(row, center, center, nowrap);
-    .container {
-        @include container();
-        @include flex(row, space-around, center, wrap);
-        .greeting {
-            @include flex(column, flex-start, flex-start, nowrap);
-            span {
-                font-size: 16px;
-                color: $textColor;
-                @include text($textFontFamily, 16px, 1.2, 400);
-                &:nth-child(2) {
-                    @include text($titleFontFamily, 50px, 1.2, 700);
-                    letter-spacing: 5px;
-                    margin: 10px 0;
-                    span {
-                        @include text($titleFontFamily, 50px, 1.2, 700);
-                        letter-spacing: 5px;
-                        position: relative;
-                        z-index: 0;
-                        display: inline-block;
-                        &:before {
-                            content: "";
-                            position: absolute;
-                            width: 100%;
-                            height: 20px;
-                            background-color: $primaryColor;
-                            bottom: 0;
-                            z-index: -1;
-                        }
-                    }
-                }
-            }
-            h1 {
-                @include text($textFontFamily, 28px, 1.8, 400);
-                margin: 0;
-            }
-            @media screen and (max-width: 1143px){
-                align-items: center;
-            }
-        }
-        .photo {
+  padding: 100px 0;
+  min-height: 100vh;
+  background-color: $bgSecondColor;
+  @include flex(row, center, center, nowrap);
+
+  .particles {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0.3;
+  }
+
+  .container {
+    @include container();
+    @include flex(row, space-around, center, wrap);
+
+    .greeting {
+      @include flex(column, flex-start, flex-start, nowrap);
+
+      span {
+        font-size: 16px;
+        color: $textColor;
+        @include text($textFontFamily, 16px, 1.2, 400);
+
+        &:nth-child(2) {
+          @include text($titleFontFamily, 50px, 1.2, 700);
+          letter-spacing: 5px;
+          margin: 10px 0;
+
+          span {
+            @include text($titleFontFamily, 50px, 1.2, 700);
+            letter-spacing: 5px;
             position: relative;
-            z-index: 1;
-            @media screen and (max-width: 1143px){
-                margin-top: 50px;
+            z-index: 0;
+            display: inline-block;
+
+            &:before {
+              content: "";
+              position: absolute;
+              width: 100%;
+              height: 20px;
+              background-color: $primaryColor;
+              bottom: 0;
+              z-index: -1;
             }
-            .image {
-                height: 400px;
-                width: 300px;
-                @include bgSettings();
-                background-image: url("./../assets/images/photo.jpg");
-                background-position: 80% 0;
-                @media screen and (max-width: 600px){
-                    height: 360px;
-                    width: 260px;
-                    transition: .5s;
-                }
-                &:before {
-                    content: "";
-                    position: absolute;
-                    height: 110%;
-                    width: 105%;
-                    border: 5px solid $primaryColor;
-                    left: 15px;
-                    top: -15px;
-                    z-index: -1;
-                }
-            }
+          }
         }
+        &:nth-child(3){
+          span{
+            @include text($textFontFamily, 28px, 1.8, 400);
+            margin: 0;
+          }
+        }
+      }
+      @media screen and (max-width: 1143px) {
+        align-items: center;
+      }
     }
+
+    .photo {
+      position: relative;
+      z-index: 1;
+      @media screen and (max-width: 1143px) {
+        margin-top: 50px;
+      }
+
+      .image {
+        height: 400px;
+        width: 300px;
+        @include bgSettings();
+        background-image: url("./../assets/images/photo.jpg");
+        background-position: 80% 0;
+        @media screen and (max-width: 600px) {
+          height: 360px;
+          width: 260px;
+          transition: .5s;
+        }
+
+        &:before {
+          content: "";
+          position: absolute;
+          height: 110%;
+          width: 105%;
+          border: 5px solid $primaryColor;
+          left: 15px;
+          top: -15px;
+          z-index: -1;
+        }
+      }
+    }
+  }
 }
