--- a/src/contacts/Contacts.module.scss
+++ b/src/contacts/Contacts.module.scss
@@ -59,6 +59,11 @@
         align-self: center;
         background-color: transparent;
       }
+      .sendFont {
+        color: white;
+        text-align: center;
+      }
+
     }
   }
 }
