--- a/src/main/Main.module.scss
+++ b/src/main/Main.module.scss
@@ -74,8 +74,7 @@
         height: 400px;
         width: 300px;
         @include bgSettings();
-        background-image: url("./../assets/images/photo.jpg");
-        background-position: 80% 0;
+        background-image: url("./../assets/images/photo.png");
         @media screen and (max-width: 600px) {
           height: 360px;
           width: 260px;
